project('microwut', 'cpp')

nyaap_src = ['base_flood.cpp', 'base_spoofed_flood.cpp', 'engine.cpp', 'http.cpp', 'icmp_flood.cpp', 'main.cpp', 'rsocket.cpp', 'socket.cpp', 'spoofed_tcp_flood.cpp', 'spoofed_udp_flood.cpp', 'ssocket.cpp', 'stdafx.cpp', 'tcp_flood.cpp', 'udp_flood.cpp', 'utils.cpp']
executable('wut', nyaap_src)
